// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/Alert Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 hExPlF sc-fXEqDS hyLvgQ"
  >
    <div
      class="sc-gKclnd exdBHI sc-iCfMLu bURqap sc-hGPBjI sc-dlVxhl dljPk hpBCna sc-llYSUQ FJxnU"
    >
      <div
        class="sc-fKVqWL hOcWtv sc-bBHxTw bkFZrq"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-circle-check "
          data-icon="circle-check"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 256C0 114.6 114.6 0 256 0C397.4 0 512 114.6 512 256C512 397.4 397.4 512 256 512C114.6 512 0 397.4 0 256zM371.8 211.8C382.7 200.9 382.7 183.1 371.8 172.2C360.9 161.3 343.1 161.3 332.2 172.2L224 280.4L179.8 236.2C168.9 225.3 151.1 225.3 140.2 236.2C129.3 247.1 129.3 264.9 140.2 275.8L204.2 339.8C215.1 350.7 232.9 350.7 243.8 339.8L371.8 211.8z"
            fill="currentColor"
          />
        </svg>
      </div>
      <div
        class="sc-gKclnd iQIogj sc-iCfMLu CqgIU"
      >
        <span
          class="sc-fKVqWL Gjjzu sc-iwjdpV fivJgS"
        >
          Success!
        </span>
        <span
          class="sc-fKVqWL hOcWtv sc-iwjdpV gmQuoR"
        >
          This is a default alert
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Alert Emphasized 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 hExPlF sc-fXEqDS hyLvgQ"
  >
    <div
      class="sc-gKclnd exdBHI sc-iCfMLu huiLtj sc-hGPBjI sc-dlVxhl dljPk liQeNu sc-llYSUQ FJxnU"
    >
      <div
        class="sc-fKVqWL hOcWtv sc-bBHxTw eYXqkg"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-lightbulb "
          data-icon="lightbulb"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 384 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M112.1 454.3c0 6.297 1.816 12.44 5.284 17.69l17.14 25.69c5.25 7.875 17.17 14.28 26.64 14.28h61.67c9.438 0 21.36-6.401 26.61-14.28l17.08-25.68c2.938-4.438 5.348-12.37 5.348-17.7L272 415.1h-160L112.1 454.3zM191.4 .0132C89.44 .3257 16 82.97 16 175.1c0 44.38 16.44 84.84 43.56 115.8c16.53 18.84 42.34 58.23 52.22 91.45c.0313 .25 .0938 .5166 .125 .7823h160.2c.0313-.2656 .0938-.5166 .125-.7823c9.875-33.22 35.69-72.61 52.22-91.45C351.6 260.8 368 220.4 368 175.1C368 78.61 288.9-.2837 191.4 .0132zM192 96.01c-44.13 0-80 35.89-80 79.1C112 184.8 104.8 192 96 192S80 184.8 80 176c0-61.76 50.25-111.1 112-111.1c8.844 0 16 7.159 16 16S200.8 96.01 192 96.01z"
            fill="currentColor"
          />
        </svg>
      </div>
      <div
        class="sc-gKclnd iQIogj sc-iCfMLu lfVmRC"
      >
        <span
          class="sc-fKVqWL Gjjzu sc-iwjdpV fivJgS"
        >
          Note!
        </span>
        <span
          class="sc-fKVqWL hOcWtv sc-iwjdpV GMWeg"
        >
          This is an emphasized alert
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Alert Plaintext 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 hExPlF sc-fXEqDS hyLvgQ"
  >
    <div
      class="sc-gKclnd exdBHI sc-iCfMLu jciJBO sc-hGPBjI dljPk sc-llYSUQ FJxnU"
    >
      <div
        class="sc-fKVqWL hOcWtv sc-bBHxTw eYXqkg"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-lightbulb "
          data-icon="lightbulb"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 384 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M112.1 454.3c0 6.297 1.816 12.44 5.284 17.69l17.14 25.69c5.25 7.875 17.17 14.28 26.64 14.28h61.67c9.438 0 21.36-6.401 26.61-14.28l17.08-25.68c2.938-4.438 5.348-12.37 5.348-17.7L272 415.1h-160L112.1 454.3zM191.4 .0132C89.44 .3257 16 82.97 16 175.1c0 44.38 16.44 84.84 43.56 115.8c16.53 18.84 42.34 58.23 52.22 91.45c.0313 .25 .0938 .5166 .125 .7823h160.2c.0313-.2656 .0938-.5166 .125-.7823c9.875-33.22 35.69-72.61 52.22-91.45C351.6 260.8 368 220.4 368 175.1C368 78.61 288.9-.2837 191.4 .0132zM192 96.01c-44.13 0-80 35.89-80 79.1C112 184.8 104.8 192 96 192S80 184.8 80 176c0-61.76 50.25-111.1 112-111.1c8.844 0 16 7.159 16 16S200.8 96.01 192 96.01z"
            fill="currentColor"
          />
        </svg>
      </div>
      <span
        class="sc-fKVqWL hOcWtv sc-iwjdpV GMWeg"
      >
        This is a plaintext alert
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Alert With Link 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 hExPlF sc-fXEqDS hyLvgQ"
  >
    <div
      class="sc-gKclnd exdBHI sc-iCfMLu bURqap sc-hGPBjI sc-dlVxhl dljPk hpBCna sc-llYSUQ FJxnU"
    >
      <div
        class="sc-fKVqWL hOcWtv sc-bBHxTw bkFZrq"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-circle-check "
          data-icon="circle-check"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 256C0 114.6 114.6 0 256 0C397.4 0 512 114.6 512 256C512 397.4 397.4 512 256 512C114.6 512 0 397.4 0 256zM371.8 211.8C382.7 200.9 382.7 183.1 371.8 172.2C360.9 161.3 343.1 161.3 332.2 172.2L224 280.4L179.8 236.2C168.9 225.3 151.1 225.3 140.2 236.2C129.3 247.1 129.3 264.9 140.2 275.8L204.2 339.8C215.1 350.7 232.9 350.7 243.8 339.8L371.8 211.8z"
            fill="currentColor"
          />
        </svg>
      </div>
      <div
        class="sc-gKclnd iQIogj sc-iCfMLu CqgIU"
      >
        <span
          class="sc-fKVqWL Gjjzu sc-iwjdpV fivJgS"
        >
          Success!
        </span>
        <span
          class="sc-fKVqWL hOcWtv sc-iwjdpV gmQuoR"
        >
          With a 
          <a
            class="sc-fbyfCU hJTRtN sc-GEbAx hJvBRH"
            color="primary.main"
            href="test"
          >
            link
          </a>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Alert Without Dismiss 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 hExPlF sc-fXEqDS hyLvgQ"
  >
    <div
      class="sc-gKclnd exdBHI sc-iCfMLu bURqap sc-hGPBjI sc-dlVxhl dljPk hpBCna sc-llYSUQ FJxnU"
    >
      <div
        class="sc-fKVqWL hOcWtv sc-bBHxTw bkFZrq"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-circle-check "
          data-icon="circle-check"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 256C0 114.6 114.6 0 256 0C397.4 0 512 114.6 512 256C512 397.4 397.4 512 256 512C114.6 512 0 397.4 0 256zM371.8 211.8C382.7 200.9 382.7 183.1 371.8 172.2C360.9 161.3 343.1 161.3 332.2 172.2L224 280.4L179.8 236.2C168.9 225.3 151.1 225.3 140.2 236.2C129.3 247.1 129.3 264.9 140.2 275.8L204.2 339.8C215.1 350.7 232.9 350.7 243.8 339.8L371.8 211.8z"
            fill="currentColor"
          />
        </svg>
      </div>
      <div
        class="sc-gKclnd iQIogj sc-iCfMLu CqgIU"
      >
        <span
          class="sc-fKVqWL Gjjzu sc-iwjdpV fivJgS"
        >
          Success!
        </span>
        <span
          class="sc-fKVqWL hOcWtv sc-iwjdpV gmQuoR"
        >
          Without a dismiss button
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Alert Without Prefix 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 hExPlF sc-fXEqDS hyLvgQ"
  >
    <div
      class="sc-gKclnd exdBHI sc-iCfMLu bURqap sc-hGPBjI sc-dlVxhl dljPk hpBCna sc-llYSUQ FJxnU"
    >
      <div
        class="sc-fKVqWL hOcWtv sc-bBHxTw bkFZrq"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-circle-check "
          data-icon="circle-check"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 256C0 114.6 114.6 0 256 0C397.4 0 512 114.6 512 256C512 397.4 397.4 512 256 512C114.6 512 0 397.4 0 256zM371.8 211.8C382.7 200.9 382.7 183.1 371.8 172.2C360.9 161.3 343.1 161.3 332.2 172.2L224 280.4L179.8 236.2C168.9 225.3 151.1 225.3 140.2 236.2C129.3 247.1 129.3 264.9 140.2 275.8L204.2 339.8C215.1 350.7 232.9 350.7 243.8 339.8L371.8 211.8z"
            fill="currentColor"
          />
        </svg>
      </div>
      <div
        class="sc-gKclnd iQIogj sc-iCfMLu CqgIU"
      >
        <span
          class="sc-fKVqWL Gjjzu sc-iwjdpV fivJgS"
        >
          Success!
        </span>
        <span
          class="sc-fKVqWL hOcWtv sc-iwjdpV gmQuoR"
        >
          Without a prefix
        </span>
      </div>
    </div>
  </div>
</div>
`;
